tests/fixtures/invalid/divmod_str_bool.py
# Cannot call divmod() with Str, Bool
x = divmod("hello", True)
